--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,17 @@
-.App {
-  text-align: center;
-  background-color: #b9e3bd;
-  height: 100vmin;
-}
-
-.App-logo {
-  height: 4vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  min-height: 10vh;
+.Header {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 1rem;
 }
 
-.App-banner {
-  width: 100%;
-  background-color: #173c2c;
-  color: white;
+.Hero {
+  text-align: center;
 }
 
-.App-link {
-  color: #163c2c;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
