--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
+:root {
+  --font-family-primary: ui-monospace, Menlo, Monaco, 'Cascadia Mono',
+    'Segoe UI Mono', 'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace',
+    'Source Code Pro', 'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+}
+
 html {
   box-sizing: border-box;
-  font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
+    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
+    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 }
 
 *,
@@ -20,10 +26,17 @@ h5,
 h6,
 p,
 ol,
+input,
 ul {
   margin: 0;
   padding: 0;
+  line-height: 1;
   font-weight: normal;
+  text-align: center;
+}
+
+input {
+  font-family: var(--font-family-primary);
 }
 
 h1,
@@ -32,10 +45,28 @@ h3,
 h4,
 h5,
 h6,
+label,
+button,
+nav,
+input,
 p {
+  line-height: 1.5;
   margin-bottom: 1rem;
+  font-size: 1rem;
 }
 
-a {
+a,
+button {
+  font-size: 1rem;
+  font-weight: normal;
   color: green;
+  cursor: pointer;
+  border: none;
+  background: none;
+  font-family: var(--font-family-primary);
+}
+
+button:hover,
+a:hover {
+  text-decoration: underline;
 }
