--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,6 @@
   padding: 1rem;
 }
 
-.Steps {
-  max-width: 800px;
-  margin: auto;
-  padding: 2rem;
-}
-
 .Nav {
   display: flex;
   align-items: center;
@@ -27,22 +21,50 @@
   text-align: center;
 }
 
-.Step {
+.Steps {
+  border: 1px solid var(--color-muted);
+  border-radius: var(--border-radius);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  max-width: 40rem;
+  position: relative;
+  margin: auto;
+  gap: 1rem;
 }
 
-.Field {
+.Step {
+  width: 100%;
+  padding: 0 2rem;
+}
+
+.Label {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-direction: column;
+  gap: 1rem;
 }
 
 .Progress {
   appearance: none;
   width: 100%;
   height: 3px;
+}
+
+.Summary {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: left;
+  width: 100%;
+  padding: 0 2rem;
+}
+
+.SummaryItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
