--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 :root {
+  --color-primary: green;
+  --color-default: black;
+  --color-muted: grey;
+  --color-error: red;
+  --border-radius: 2px;
   --font-family-primary: ui-monospace, Menlo, Monaco, 'Cascadia Mono',
     'Segoe UI Mono', 'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace',
     'Source Code Pro', 'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
@@ -56,11 +61,12 @@ button {
   appearance: none;
   font-size: 1rem;
   font-weight: normal;
-  color: green;
+  color: var(--color-primary);
   cursor: pointer;
   border: none;
   background: none;
   font-family: var(--font-family-primary);
+  text-decoration: none;
 }
 
 button:hover,
@@ -68,76 +74,30 @@ a:hover {
   text-decoration: underline;
 }
 
+h1 {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+h2 {
+  text-decoration: underline;
+}
+
 input {
   appearance: none;
   font-family: var(--font-family-primary);
+  width: 100%;
+  border: 1px solid var(--color-default);
+  background: none;
+  border-radius: var(--border-radius);
+  text-align: left;
+  padding: 0.5rem 1rem;
 }
 
-input:required {
-  border: 1px solid black;
-}
-
-input + span {
-  position: relative;
-}
-
-input:required + span::after {
-  font-size: 0.7rem;
-  position: absolute;
-  content: 'required';
-  color: white;
-  background-color: black;
-  padding: 5px 10px;
-  top: -26px;
-  left: -70px;
-}
-
-input + span {
-  position: relative;
-}
-
-input + span::before {
-  position: absolute;
-  right: -20px;
-  top: 5px;
+input:out-of-range {
+  border: 1px solid var(--color-error);
 }
 
 input:invalid {
-  border: 2px solid red;
-}
-
-input:invalid + span::before {
-  content: '✖';
-  color: red;
-}
-
-input:valid + span::before {
-  content: '✓';
-  color: green;
-}
-
-input + span {
-  position: relative;
-}
-
-input + span::after {
-  font-size: 0.7rem;
-  position: absolute;
-  padding: 5px 10px;
-  top: -26px;
-}
-
-input:required + span::after {
-  color: white;
-  background-color: black;
-  content: 'Required';
-  left: -70px;
-}
-
-input:out-of-range + span::after {
-  color: white;
-  background-color: red;
-  width: 155px;
-  content: 'Outside allowable value range';
-  left: -182px;
+  border: 1px solid var(--color-primary);
 }
